Fixed Text overflow issue with continue shopping button (#670)
* implemented styling changes to cart summary buttons to prevent text overflow

* updated snapshots following styling changes

* addressed points raised in PR, removed css grid for continue shopping and reverted to flex box

* removed white space from c-cart-summary.scss

* fixed merge conflict with develop

--- a/packages/reference/client/scss/60_components/_c-cart-summary.scss
+++ b/packages/reference/client/scss/60_components/_c-cart-summary.scss
@@ -69,15 +69,13 @@
   &__buttons {
     display: flex;
     flex-direction: column;
-    width: 100%;
     margin: $global-spacing-unit-small 0;
 
     @include breakpoint(desktop) {
-      display: grid;
-      grid-template-columns: [col1-start] 40% [col2-start] 57% [col2-end];
-      grid-gap: 3%;
+      flex-direction: row;
       padding-bottom: $global-spacing-unit-small;
       margin-top: $global-spacing-unit-small;
+      justify-content:space-between;
     }
 
     &--proceed {
@@ -90,6 +88,10 @@
       letter-spacing: .1rem;
       display: block;
       white-space: nowrap;
+
+      @include breakpoint(desktop) {
+        width: 49%;
+      }
 
       &:visited {
         color: $text-light;
@@ -114,6 +116,10 @@
       letter-spacing: .1rem;
       display: block;
       white-space: nowrap;
+
+      @include breakpoint(desktop) {
+        width: 49%;
+      }
 
       &:visited {
         color: $text-dark;
